--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
-    "dev": "node app.js",
-    "build": "node app.js"
+    "start": "nodemon app.js",
   },
   "keywords": [],
   "author": "",
