--- a/frontend2/package.json
+++ b/frontend2/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.11.0",
     "next": "15.5.2",
     "react": "19.1.0",
